# palette

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  README.md  REQUIREMENTS.md  SECURITY.md  beater-cli  docker-compose.prebuilt.yml  docker-compose.yml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: apple-container-build.yml  backend.yml  bare-metal-e2e-readiness.yml  browser.yml  ci.yml  container-images.yml  dashboard-ui.yml  deploy-dashboard.yml  frontend.yml  gate1-live-smoke.yml  gate2-browser-proof.yml  gate2-proof-contract.yml  merge-e2e.yml  release.yml  sdk-contract.yml  storage-backends.yml
bins/beaterctl/: Cargo.toml
bins/beaterd/: Cargo.toml
crates/beater-accounts/: Cargo.toml
crates/beater-api/: Cargo.toml
crates/beater-auth/: Cargo.toml
crates/beater-bench/: Cargo.toml
crates/beater-browser/: Cargo.toml
crates/beater-browser-capture/: Cargo.toml
crates/beater-browser-capture/src/: lib.rs
crates/beater-browser-cdp/: Cargo.toml
crates/beater-browser-cdp/src/: lib.rs
crates/beater-browser-harness/: Cargo.toml
crates/beater-browser-playwright/: Cargo.toml
crates/beater-browser-playwright/runner/: runner.js
crates/beater-browser-playwright/src/: lib.rs  protocol.rs
crates/beater-browser-playwright/tests/: conformance.rs
crates/beater-browser-webdriver/: Cargo.toml
crates/beater-browser-webdriver/src/: lib.rs
crates/beater-browser/src/: lib.rs  semconv.rs
crates/beater-bus/: Cargo.toml
crates/beater-core/: Cargo.toml
crates/beater-eval/: Cargo.toml
crates/beater-experiments/: Cargo.toml
crates/beater-gateway/: Cargo.toml
crates/beater-gateway/src/: cache.rs  lib.rs  provider.rs  tests.rs
crates/beater-guardrails/: Cargo.toml
crates/beater-ingest/: Cargo.toml
crates/beater-judge/: Cargo.toml
crates/beater-langfuse/: Cargo.toml
crates/beater-mcp/: Cargo.toml
crates/beater-oauth/: Cargo.toml
crates/beater-oauth-server/: Cargo.toml
crates/beater-otlp/: Cargo.toml
crates/beater-replay/: Cargo.toml
crates/beater-sandbox/: Cargo.toml
crates/beater-schema/: Cargo.toml
crates/beater-search/: Cargo.toml
crates/beater-secrets/: Cargo.toml
crates/beater-security/: Cargo.toml
crates/beater-stats/: Cargo.toml
crates/beater-store/: Cargo.toml
crates/beater-store-conformance/: Cargo.toml
crates/beater-store-memory/: Cargo.toml
crates/beater-store-obj/: Cargo.toml
crates/beater-store-sql/: Cargo.toml
crates/beater-temporal/: Cargo.toml
crates/xtask/: Cargo.toml
docs/: api-stability-policy.md  apple-container.md  architecture-status.md  bus-backends.md  data-engine-integration.md  ecosystem-integration-contract.md  hosting.md  local-dev.md  mcp-stdio.md  sdk-platform-architecture.md  security-regression-fixtures.md
docs/demos/: gate2-browser-demo.md  gate2-compose-browser-demo.md  gate2-compose-browser-demo.webm  gate2-compose-stopwatch.md  gate2-outside-person-proof.md  gate2-outside-runner-card.md
docs/engineering/: bare-metal-lane-policy.json  bare-metal-operations-map.md  (+4 more)
examples/: README.md
scripts/: apply-branch-protection.sh  bare-metal-assert-report.py  bare-metal-dispatch.sh  bare-metal-lane-fleet.sh  bare-metal-optimize-env.sh  bare-metal-pr-helper.sh  bare-metal-run-matrix.sh  browser-e2e.sh  check-bare-metal-readiness.py  check-bus-backends-docs.py  check-contract-sync.sh  check-ecosystem-contract.py  check-gate0-foundations.py  check-gate2-outside-readiness.py  check-gate2-public-handoff.py  check-semconv-drift.py  check-vercel-dashboard-scope.py  e2e-clients-live.sh  e2e-merge-gate.sh  gate2-compose-stopwatch.sh  gate2-outside-local-preflight.sh  gate2-outside-run.sh  gate2-proof.sh  gate2_proof_contract.py  generate-gate2-outside-proof.py  publish-sdk.sh  regen-sdks.sh  report-ignored-tests.sh  report-openapi-breaking-changes.sh  smoke-compose.sh  validate-gate2-outside-proof.sh
sdks/: README.md
(+1329 files in other folders)
