[package]
name = "beater-browser-cdp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beater-browser = { path = "../beater-browser" }
chromiumoxide.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
