[package]
name = "beater-browser-webdriver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beater-browser = { path = "../beater-browser" }
fantoccini.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["io-util"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
