[package]
name = "beater-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
utoipa = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
beater-core = { path = "../beater-core" }
beater-judge = { path = "../beater-judge" }
beater-schema = { path = "../beater-schema" }
beater-secrets = { path = "../beater-secrets" }
beater-store = { path = "../beater-store" }
chrono.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
beater-store-memory = { path = "../beater-store-memory" }

[lints]
workspace = true
