[package]
name = "beater-temporal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beater-core = { path = "../beater-core" }
beater-schema = { path = "../beater-schema" }
beater-ingest = { path = "../beater-ingest" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
